--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="info">
         <span class="code">#EEEDF0</span>
-        <button class="btn" id="change-color-1">Change</button>
+        <button class="btn" id="change-color-1" data-btn>Change</button>
       </div>
     </div>
 
@@ -28,7 +28,7 @@
       </div>
       <div class="info">
         <span class="code">#A1B5C1</span>
-        <button class="btn" id="change-color-2">Change</button>
+        <button class="btn" id="change-color-2" data-btn>Change</button>
       </div>
     </div>
 
@@ -38,7 +38,7 @@
       </div>
       <div class="info">
         <span class="code">#F9ACA7</span>
-        <button class="btn" id="change-color-3">Change</button>
+        <button class="btn" id="change-color-3" data-btn>Change</button>
       </div>
     </div>
 
@@ -48,7 +48,7 @@
       </div>
       <div class="info">
         <span class="code">#68747D</span>
-        <button class="btn" id="change-color-4">Change</button>
+        <button class="btn" id="change-color-4" data-btn>Change</button>
       </div>
     </div>
 
@@ -58,12 +58,12 @@
       </div>
       <div class="info">
         <span class="code">#CF365F</span>
-        <button class="btn" id="change-color-5">Change</button>
+        <button class="btn" id="change-color-5" data-btn>Change</button>
       </div>
     </div>
   </div>
   <div class="default-container">
-    <button class="btn-cust" id="change-color-6">Default Background</button>
+    <button class="btn-cust" id="change-color-6" data-btn>Default Background</button>
     <p class="paragraph">Click here to set default background of this page</p>
   </div>
 </body>
