modified script.js & index.html

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
   </div>
   <div class="default-container">
-    <button class="btn-cust" id="change-color-6" data-btn>Default Background</button>
+    <button class="btn-cust btn" id="change-color-6" data-btn>Default Background</button>
     <p class="paragraph">Click here to set default background of this page</p>
   </div>
 </body>
